--- a/UART_controller/report/report.tex
+++ b/UART_controller/report/report.tex
@@ -55,11 +55,12 @@
         \vspace{3cm}
 
         \hfill\begin{flushright}
-             Студенты:
-             Куклина М.Д. \\
-             Кириллова А.А.
+             Студенты: \\
+             Куклина М.\\
+             Кириллова А.
              \vfill
              Преподаватель:
+             Баевских A.
         \end{flushright}
         \vfill
         \vfill
