Fix tx. Send-mode works in sim. Need to check on hw

--- a/MIPS-UART-module/report/report.tex
+++ b/MIPS-UART-module/report/report.tex
@@ -47,7 +47,7 @@
             Кафедра вычислительной техники
             \vspace{4cm}
 
-            \textsc{ \textbf{Отчёт по лабораторной работе  № 2} \\
+            \textsc{ \textbf{Отчёт по лабораторной работе  № 3} \\
             по дисциплине: "Схемотехника ЭВМ"}\\Вариант №5\\[8mm]
 
             \bigskip
@@ -98,6 +98,9 @@
             \end{figure}
         \end{landscape}
      \section*{Временные диаграммы}
+        \begin{figure}[h!]
+            \includegraphics[scale=0.5]{../images/echo_mode.png}
+        \end{figure}
         \begin{figure}[h!]
             \includegraphics[scale=0.5]{../images/echo_mode.png}
         \end{figure}
